examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_s_rec.st
language core;

fn main(n : Nat) -> Nat {
  return Nat::rec(n, succ(0), fn(i : Nat) {
             return fn(r : Nat) {
             return true
           } })
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
